--- a/FitHub/FitHub/UserTableViewCell.xib
+++ b/FitHub/FitHub/UserTableViewCell.xib
@@ -21,39 +21,39 @@
                 <rect key="frame" x="0.0" y="0.0" width="394" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Num" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2d-gI-meB">
-                        <rect key="frame" x="20" y="11" width="80" height="62"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999999999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2d-gI-meB">
+                        <rect key="frame" x="294" y="11" width="80" height="62"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="1Eu-q0-aa9"/>
+                            <constraint firstAttribute="width" constant="80" id="3Ib-uj-DHW"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kTR-m2-LBy">
-                        <rect key="frame" x="108" y="11" width="62" height="62"/>
+                        <rect key="frame" x="20" y="11" width="62" height="62"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="kTR-m2-LBy" secondAttribute="height" multiplier="1:1" id="bgE-eT-xHb"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RlZ-ZK-2aM">
-                        <rect key="frame" x="178" y="11" width="196" height="62"/>
+                        <rect key="frame" x="90" y="11" width="196" height="62"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="RlZ-ZK-2aM" secondAttribute="trailing" id="2gL-9q-SpS"/>
+                    <constraint firstItem="Z2d-gI-meB" firstAttribute="leading" secondItem="RlZ-ZK-2aM" secondAttribute="trailing" constant="8" id="56b-sd-z3M"/>
                     <constraint firstItem="RlZ-ZK-2aM" firstAttribute="leading" secondItem="kTR-m2-LBy" secondAttribute="trailing" constant="8" id="5f3-pz-Axd"/>
                     <constraint firstItem="kTR-m2-LBy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="71z-Ad-tp2"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kTR-m2-LBy" secondAttribute="bottom" id="BsL-MN-LLR"/>
-                    <constraint firstItem="kTR-m2-LBy" firstAttribute="leading" secondItem="Z2d-gI-meB" secondAttribute="trailing" constant="8" id="S8Y-Np-oYV"/>
-                    <constraint firstItem="Z2d-gI-meB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Y1G-zd-7rv"/>
-                    <constraint firstItem="Z2d-gI-meB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="jmj-3N-Hh3"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="Z2d-gI-meB" secondAttribute="bottom" id="vMR-Wk-mPc"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="RlZ-ZK-2aM" secondAttribute="bottom" id="vPY-Tq-fyv"/>
+                    <constraint firstItem="Z2d-gI-meB" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="FRw-tS-vsq"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Z2d-gI-meB" secondAttribute="trailing" id="RiR-PQ-9it"/>
+                    <constraint firstItem="kTR-m2-LBy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gNP-fl-Ifd"/>
+                    <constraint firstItem="RlZ-ZK-2aM" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="w4G-o0-7S0"/>
                     <constraint firstItem="RlZ-ZK-2aM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zOt-4W-rTZ"/>
+                    <constraint firstItem="Z2d-gI-meB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zyW-hd-txa"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
