--- a/FitHub/FitHub/UserTableViewCell.xib
+++ b/FitHub/FitHub/UserTableViewCell.xib
@@ -37,9 +37,15 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RlZ-ZK-2aM">
-                        <rect key="frame" x="90" y="11" width="196" height="62"/>
+                        <rect key="frame" x="90" y="11" width="196" height="31"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NFP-oG-r5z">
+                        <rect key="frame" x="90" y="42" width="196" height="31"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -49,9 +55,13 @@
                     <constraint firstItem="kTR-m2-LBy" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="71z-Ad-tp2"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kTR-m2-LBy" secondAttribute="bottom" id="BsL-MN-LLR"/>
                     <constraint firstItem="Z2d-gI-meB" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="FRw-tS-vsq"/>
+                    <constraint firstItem="NFP-oG-r5z" firstAttribute="leading" secondItem="RlZ-ZK-2aM" secondAttribute="leading" id="G2a-jS-jfj"/>
+                    <constraint firstItem="NFP-oG-r5z" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Hse-Fo-LVW"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Z2d-gI-meB" secondAttribute="trailing" id="RiR-PQ-9it"/>
+                    <constraint firstItem="NFP-oG-r5z" firstAttribute="width" secondItem="RlZ-ZK-2aM" secondAttribute="width" id="b3P-a1-JJ0"/>
+                    <constraint firstItem="RlZ-ZK-2aM" firstAttribute="height" secondItem="NFP-oG-r5z" secondAttribute="height" id="duK-P1-7WY"/>
                     <constraint firstItem="kTR-m2-LBy" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gNP-fl-Ifd"/>
-                    <constraint firstItem="RlZ-ZK-2aM" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="w4G-o0-7S0"/>
+                    <constraint firstItem="NFP-oG-r5z" firstAttribute="top" secondItem="RlZ-ZK-2aM" secondAttribute="bottom" id="kC0-Oh-Y6G"/>
                     <constraint firstItem="RlZ-ZK-2aM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zOt-4W-rTZ"/>
                     <constraint firstItem="Z2d-gI-meB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zyW-hd-txa"/>
                 </constraints>
@@ -62,7 +72,7 @@
                 <outlet property="nameLabel" destination="RlZ-ZK-2aM" id="bgi-in-kyH"/>
                 <outlet property="numLabel" destination="Z2d-gI-meB" id="st5-YK-8cM"/>
             </connections>
-            <point key="canvasLocation" x="108" y="80"/>
+            <point key="canvasLocation" x="964" y="-71"/>
         </tableViewCell>
     </objects>
 </document>
