--- a/FitHub/FitHub/Home.storyboard
+++ b/FitHub/FitHub/Home.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,14 +32,43 @@
                     <view key="view" contentMode="scaleToFill" id="fw0-CR-zyJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c4k-I7-s7A">
+                                <rect key="frame" x="0.0" y="64" width="375" height="30"/>
+                                <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Ko1-4l-Umw"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="doB-ov-Mm5">
+                                <rect key="frame" x="0.0" y="94" width="375" height="573"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ozP-Be-G4H" id="WRI-dx-AsJ"/>
+                                    <outlet property="delegate" destination="ozP-Be-G4H" id="TrB-Tp-651"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="c4k-I7-s7A" firstAttribute="leading" secondItem="j2j-W2-Qee" secondAttribute="leading" id="2Ej-UV-k8b"/>
+                            <constraint firstItem="doB-ov-Mm5" firstAttribute="leading" secondItem="j2j-W2-Qee" secondAttribute="leading" id="D1J-KY-t9j"/>
+                            <constraint firstItem="j2j-W2-Qee" firstAttribute="trailing" secondItem="c4k-I7-s7A" secondAttribute="trailing" id="NOK-vi-B1o"/>
+                            <constraint firstItem="c4k-I7-s7A" firstAttribute="top" secondItem="j2j-W2-Qee" secondAttribute="top" id="fcd-is-7Xn"/>
+                            <constraint firstItem="doB-ov-Mm5" firstAttribute="top" secondItem="c4k-I7-s7A" secondAttribute="bottom" id="kaR-BX-kRO"/>
+                            <constraint firstItem="j2j-W2-Qee" firstAttribute="bottom" secondItem="doB-ov-Mm5" secondAttribute="bottom" id="uML-H2-jhb"/>
+                            <constraint firstItem="j2j-W2-Qee" firstAttribute="trailing" secondItem="doB-ov-Mm5" secondAttribute="trailing" id="vFF-Ek-PWK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="j2j-W2-Qee"/>
                     </view>
                     <navigationItem key="navigationItem" id="5Td-7U-JEK"/>
+                    <connections>
+                        <outlet property="tableView" destination="doB-ov-Mm5" id="LWx-aj-XVf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DYq-ky-JiC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1086" y="-915"/>
+            <point key="canvasLocation" x="-1122.4000000000001" y="-980.05997001499259"/>
         </scene>
     </scenes>
 </document>
