--- a/FitHub/FitHub/RepositoryTableViewCell.xib
+++ b/FitHub/FitHub/RepositoryTableViewCell.xib
@@ -12,69 +12,75 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModule="FitHub" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="93" id="KGk-i7-Jjw" customClass="RepositoryTableViewCell" customModule="FitHub" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="103.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="92.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMp-a4-mEP">
-                        <rect key="frame" x="16" y="11" width="200" height="18"/>
+                        <rect key="frame" x="16" y="11" width="42" height="18"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="18" id="zOf-Ng-cjK"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 Star" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOZ-LU-y3g">
-                        <rect key="frame" x="224" y="11" width="80" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="80" id="mbW-RI-h0D"/>
-                            <constraint firstAttribute="height" constant="18" id="ng1-Ra-VSQ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kAg-vj-wH2">
-                        <rect key="frame" x="16" y="37" width="3.5" height="14.5"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="14.5" id="jG2-Xg-6Z7"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkP-qw-1X4">
-                        <rect key="frame" x="16" y="59" width="288" height="34"/>
-                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="12"/>
+                        <rect key="frame" x="16" y="59" width="288" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="12"/>
                         <color key="textColor" red="0.34509803919999998" green="0.37647058820000001" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Rnw-GN-SM8">
+                        <rect key="frame" x="16" y="37" width="106" height="14"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iul-TH-e6P">
+                                <rect key="frame" x="0.0" y="0.0" width="34" height="14"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ezr-g2-k2i">
+                                <rect key="frame" x="39" y="0.0" width="31" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3u-bt-GmR">
+                                <rect key="frame" x="75" y="0.0" width="31" height="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="14" id="4uj-pC-2W0"/>
+                        </constraints>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="kAg-vj-wH2" firstAttribute="top" secondItem="cMp-a4-mEP" secondAttribute="bottom" constant="8" id="03E-ui-duw"/>
-                    <constraint firstItem="sOZ-LU-y3g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="0Oi-sR-KLG"/>
+                    <constraint firstItem="Rnw-GN-SM8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="02O-HZ-LeQ"/>
                     <constraint firstItem="cMp-a4-mEP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="B0O-ME-cae"/>
-                    <constraint firstItem="DkP-qw-1X4" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="GdR-39-XXc"/>
-                    <constraint firstItem="sOZ-LU-y3g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="JHL-U0-0Kj"/>
+                    <constraint firstItem="Rnw-GN-SM8" firstAttribute="top" secondItem="cMp-a4-mEP" secondAttribute="bottom" constant="8" id="GLD-sH-En5"/>
+                    <constraint firstItem="DkP-qw-1X4" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="GdR-39-XXc"/>
                     <constraint firstItem="DkP-qw-1X4" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="K3u-I6-hgn"/>
-                    <constraint firstItem="sOZ-LU-y3g" firstAttribute="leading" secondItem="cMp-a4-mEP" secondAttribute="trailing" constant="8" id="Ymf-EI-Buj"/>
                     <constraint firstItem="DkP-qw-1X4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="aL4-zi-trH"/>
                     <constraint firstItem="cMp-a4-mEP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="oCH-nV-WKO"/>
-                    <constraint firstItem="kAg-vj-wH2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="qhZ-yc-rnr"/>
-                    <constraint firstItem="DkP-qw-1X4" firstAttribute="top" secondItem="kAg-vj-wH2" secondAttribute="bottom" constant="8" id="taR-hc-NOc"/>
+                    <constraint firstItem="DkP-qw-1X4" firstAttribute="top" secondItem="Rnw-GN-SM8" secondAttribute="bottom" constant="8" id="plA-VW-6ma"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="desLabel" destination="DkP-qw-1X4" id="Igw-KT-Zf3"/>
+                <outlet property="forkLabel" destination="f3u-bt-GmR" id="hiL-pp-ZyU"/>
+                <outlet property="languageLabel" destination="iul-TH-e6P" id="GIa-nn-0fe"/>
                 <outlet property="nameLabel" destination="cMp-a4-mEP" id="kfe-a2-E1E"/>
-                <outlet property="starLabel" destination="sOZ-LU-y3g" id="q2z-Ih-SIG"/>
+                <outlet property="starLabel" destination="Ezr-g2-k2i" id="1nc-dt-ajJ"/>
             </connections>
-            <point key="canvasLocation" x="-19" y="23"/>
+            <point key="canvasLocation" x="1663" y="-91"/>
         </tableViewCell>
     </objects>
 </document>
