--- a/FitHub/FitHub/Base.lproj/Home.storyboard
+++ b/FitHub/FitHub/Base.lproj/Home.storyboard
@@ -25,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-1788" y="-915"/>
         </scene>
-        <!--Home View Controller-->
+        <!--All Language-->
         <scene sceneID="yJz-xI-Qt9">
             <objects>
                 <viewController id="ozP-Be-G4H" customClass="HomeViewController" customModule="FitHub" customModuleProvider="target" sceneMemberID="viewController">
@@ -35,9 +35,23 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c4k-I7-s7A">
                                 <rect key="frame" x="0.0" y="64" width="375" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total:0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uec-hO-j7a">
+                                        <rect key="frame" x="267" y="0.0" width="100" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="cKb-QO-JpM"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="12"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Ko1-4l-Umw"/>
+                                    <constraint firstAttribute="trailing" secondItem="uec-hO-j7a" secondAttribute="trailing" constant="8" id="UGl-Fj-fNN"/>
+                                    <constraint firstItem="uec-hO-j7a" firstAttribute="top" secondItem="c4k-I7-s7A" secondAttribute="top" id="jK5-cu-5FR"/>
+                                    <constraint firstAttribute="bottom" secondItem="uec-hO-j7a" secondAttribute="bottom" id="tSt-iR-p5p"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="doB-ov-Mm5">
@@ -61,14 +75,28 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j2j-W2-Qee"/>
                     </view>
-                    <navigationItem key="navigationItem" id="5Td-7U-JEK"/>
+                    <navigationItem key="navigationItem" title="All Language" id="5Td-7U-JEK">
+                        <barButtonItem key="leftBarButtonItem" title="City" id="7pt-2v-ths">
+                            <connections>
+                                <action selector="cityItemTap:" destination="ozP-Be-G4H" id="JiH-uA-a4B"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Language" id="2qy-c1-b3m">
+                            <connections>
+                                <action selector="languageItemTap:" destination="ozP-Be-G4H" id="bdZ-27-TJK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="cityItem" destination="7pt-2v-ths" id="gb0-uV-kik"/>
+                        <outlet property="languageItem" destination="2qy-c1-b3m" id="niV-pL-ybZ"/>
                         <outlet property="tableView" destination="doB-ov-Mm5" id="LWx-aj-XVf"/>
+                        <outlet property="totalLabel" destination="uec-hO-j7a" id="JUK-3e-t0H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DYq-ky-JiC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1122.4000000000001" y="-980.05997001499259"/>
+            <point key="canvasLocation" x="-956" y="-924"/>
         </scene>
     </scenes>
 </document>
