--- a/FitHub/FitHub/UserDetailViewController.storyboard
+++ b/FitHub/FitHub/UserDetailViewController.storyboard
@@ -181,17 +181,17 @@ Label</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tN8-GF-O8X" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="IhM-Rg-PAZ">
                     <connections>
-                        <segue destination="3r6-Bf-xpI" kind="push" id="uNl-HQ-duZ"/>
+                        <segue destination="3r6-Bf-xpI" kind="push" identifier="follower" id="uNl-HQ-duZ"/>
                     </connections>
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="JcI-42-IGY">
                     <connections>
-                        <segue destination="sKy-n7-aud" kind="push" id="K4t-1e-cH3"/>
+                        <segue destination="sKy-n7-aud" kind="push" identifier="repository" id="K4t-1e-cH3"/>
                     </connections>
                 </tapGestureRecognizer>
                 <tapGestureRecognizer id="5Om-Lz-Ta1">
                     <connections>
-                        <segue destination="cPs-Cc-ZRg" kind="push" id="NJF-sc-mDt"/>
+                        <segue destination="cPs-Cc-ZRg" kind="push" identifier="following" id="NJF-sc-mDt"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
