--- a/FitHub/FitHub/Events/EventsTableViewCell.xib
+++ b/FitHub/FitHub/Events/EventsTableViewCell.xib
@@ -18,10 +18,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Av-VC-oq6">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Av-VC-oq6">
                         <rect key="frame" x="8" y="8" width="304" height="27.5"/>
-                        <string key="text">LabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssssLabelsdhajkhkffdasssssssss</string>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
